# weather-retriever-mcp

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml
mcpserver/: Dockerfile  client-sse.py  client-stdio.py  server.py
server/: client.py  weather.json  weather.py
